neural network from scratch

--- a/nn.ipynb
+++ b/nn.ipynb
@@ -31,7 +31,6 @@
     }
    ],
    "source": [
-    "# neural networks blueprint  \n",
     "image = 'image.jpg'\n",
     "image = cv2.imread(image, cv2.IMREAD_GRAYSCALE)\n",
     "image.shape"
@@ -136,18 +135,9 @@
     }
    ],
    "source": [
+    "## normalization\n",
     "image = image / 255.0\n",
     "image.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "d2cfc536-f7b4-4209-b839-22821f35a965",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## why we need normalization, resizing and flattening ??"
    ]
   },
   {
