Cauchy-Schwarz inequalit

--- a/nn.ipynb
+++ b/nn.ipynb
@@ -485,13 +485,15 @@
    "id": "d14f82c4-1cea-46ac-9fa3-9f666ee5fdab",
    "metadata": {},
    "source": [
-    "gonna use `autograd` lib here to calculate the derivatives because i already know how to calculate them :> \n",
     "\n",
     "so in neural network that's how we gonna proceed\n",
     "1. gradient of loss w.r.t to prediction \n",
     "2. Calculate the gradients of output layer (its activation function and weights + biases)\n",
     "3. gradients of hidden layer(w.r.t weights and biases of that hidden layer)\\\n",
-    "**(it will tell how much the output layer's predictions  and hidden layer output contributed to the loss)**"
+    "**(it will tell how much the output layer's predictions  and hidden layer output contributed to the loss)**\n",
+    "\n",
+    "\n",
+    "gonna use `autograd` lib here to calculate the derivatives because i already know how to calculate them :> \n"
    ]
   },
   {
@@ -600,6 +602,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9e3bd05f-ce69-48fa-9f32-4cd0a9c79a7a",
+   "metadata": {},
+   "source": [
+    "## Connecting Learning Rate and Cauchy-Schwarz Inequality\n",
+    "\n",
+    "**Learning Rate**: In gradient descent, the learning rate (or step size) is how much you adjust your position based on the gradient. It's like saying, \"I'm going to move this much in the direction that decreases my function.\"\n",
+    "\n",
+    "**Cauchy-Schwarz Inequality**: This inequality helps us understand limits when dealing with vectors, like the gradient and our movement direction. It tells us that the way we combine these vectors (like how we move) has certain boundaries.\n",
+    "\n",
+    "*When you're moving based on the gradient, you want to ensure you're not taking too big of a step that could mess up your search for the minimum. The Cauchy-Schwarz inequality helps provide that framework to know what’s a reasonable move.*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3290f3f-0027-463a-a1ba-1e1541dff63d",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### **Cauchy-Schwarz Inequality**\n",
+    "\n",
+    "The Cauchy-Schwarz inequality tells us about the relationship between vectors, specifically:\n",
+    "\n",
+    "$$  \n",
+    "\\mathbf{u} \\cdot \\mathbf{v} \\leq \\| \\mathbf{u} \\| \\|\\mathbf{v}\\| \n",
+    "$$\n",
+    "\n",
+    "suppose we have two lists of numbers(two vectors):\n",
+    "\n",
+    "List A: [2,3]\\\n",
+    "List B: [4,5]\n",
+    "\n",
+    "First, we calculate the left side of the Cauchy-Schwarz inequality, which is the sum of the products of corresponding elements(dot product of vectors) from both lists:\n",
+    "$(2⋅4) + (3⋅5)= 8+15=23$\n",
+    "\n",
+    "now the right side which involves finding the sum of squares of each list \n",
+    "\n",
+    "for list A\\\n",
+    "$2^2 + 3^2 = 4+9=13$\n",
+    "\n",
+    "for list B\\\n",
+    "$4^2 + 5^2 = 16 + 25 = 41$\n",
+    "\n",
+    "multiply these two sums \n",
+    "$13 . 41 = 533$\n",
+    "\n",
+    "according to cauchy schwarz inequality the square of the sum of products should be less than or equal to the product of sum of the squares\\\n",
+    "$(23)^2 \\leq 533$ where $(23)^2 = 529$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "71e131dd-e94a-4d75-82cb-b191fb13569e",
+   "metadata": {},
+   "source": [
+    "### **Limits of the Learning Rate**\n",
+    "\n",
+    "- **Too Small**: If your learning rate is very small you will take tiny steps while this can ensure stability and precision it means that convergence to the minimum will be very slow and result in long training times especially in large datasets or complex models\n",
+    "\n",
+    "- **Too Large**: if the learning rate is too large you risk overshooting the minimum so instead of converging to the lowest point of the function it might bounce back and forth across it or even diverge, meaning your function values keep increasing instead of decreasing\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee7b424d-5c0a-4bc4-9155-202eaec0cdc5",
+   "metadata": {},
+   "source": [
+    "In terms of gradient descent:\n",
+    "\n",
+    "- **Vector Direction**: The gradient $\\nabla f(x)$ indicates the direction of the steepest ascent. Moving in the opposite direction (for minimization) means taking a step toward reducing the function value.\n",
+    "\n",
+    "\n",
+    "- **Magnitude of Step**: When you apply the learning rate to the gradient, you're effectively scaling the gradient vector. The Cauchy-Schwarz inequality suggests that the size of your movement (step) should respect the relationship between the gradient's size and direction. This prevents taking steps that are disproportionate to the gradient's direction."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29d73189-fc16-445e-841c-0253288fa332",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = 0.001 ## learning rate "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "fe8ea98a-853c-469d-bfa5-ac99b26fb921",
@@ -607,7 +695,7 @@
    "outputs": [],
    "source": [
     "# update parameters\n",
-    "lr = 0.001 \n",
+    "\n",
     "i_w -= lr * d_i_w\n",
     "bh -= lr * d_b_h\n",
     "w_o -= lr * d_w_o\n",
