--- a/nn.ipynb
+++ b/nn.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1e14d11ee90>"
+       "<matplotlib.image.AxesImage at 0x21f6c3f4f90>"
       ]
      },
      "execution_count": 4,
@@ -94,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1e14d26ef50>"
+       "<matplotlib.image.AxesImage at 0x21f6c506fd0>"
       ]
      },
      "execution_count": 5,
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "f87207ab-96cd-4084-aef5-8728bdb0559d",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
        "(784, 1)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "06cdc5ab-839f-4095-b476-b60de888e08d",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "7b0035c6-4345-4bd2-904e-653d1652d7bf",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "(128, 784)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "d0894d53-5216-4bf1-af85-4c05eb42185c",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "(128, 1)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "eee84942-ab5f-49c2-ad1e-fc5fc189c91c",
    "metadata": {},
    "outputs": [
@@ -282,7 +282,7 @@
        "(128, 1)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "bf7e4412-0f59-4fe1-80fa-e60a50b411a9",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "c8e17479-ab2e-4d0a-a3ce-12dfea04c87f",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "(2, 1)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "c7c49045-1894-4855-9b4c-521a3dd8d7f7",
    "metadata": {},
    "outputs": [
@@ -387,17 +387,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.49875324]\n",
-      " [0.4994381 ]]\n"
+      "[[0.50092796]\n",
+      " [0.5007127 ]]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0.99819134])"
+       "array([1.00164067])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,17 +412,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "3413f32d-d079-429e-a5ad-b93b4f17f5dd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6913403884001573"
+       "0.6947892164251839"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,6 +491,8 @@
     "2. Calculate the gradients of output layer (its activation function and weights + biases)\n",
     "3. gradients of hidden layer(w.r.t weights and biases of that hidden layer)\\\n",
     "**(it will tell how much the output layer's predictions  and hidden layer output contributed to the loss)**\n",
+    "4. Update the weight and biases to the point when we reach global minimun of our cost function. (gradient descent)\n",
+    "\n",
     "\n",
     "\n",
     "gonna use `autograd` lib here to calculate the derivatives because i already know how to calculate them :> \n"
@@ -498,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "416b4009-e493-4e1a-8e34-e499b933fe15",
    "metadata": {},
    "outputs": [],
@@ -508,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "e8beedba-3529-4709-8e54-8bbd2d0ae18a",
    "metadata": {},
    "outputs": [],
@@ -519,18 +521,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "23092977-ee0b-496d-909d-60f4699dc359",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[1.99502536],\n",
-       "       [1.99775493]])"
+       "array([[2.00371875],\n",
+       "       [2.00285488]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,18 +545,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "cee9beb0-1dcc-40ad-a84a-2bdd71f6f07d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.49875324],\n",
-       "       [0.4994381 ]])"
+       "array([[0.50092796],\n",
+       "       [0.5007127 ]])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "db15be69-b9fc-412c-8461-11fb12099c92",
    "metadata": {},
    "outputs": [],
@@ -579,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "ae0b66d6-2336-4e3b-8a47-ed30ccd4ade9",
    "metadata": {},
    "outputs": [],
@@ -591,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "7e54dced-9cc9-4058-91a1-56a2ccc89c3e",
    "metadata": {},
    "outputs": [],
@@ -679,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "29d73189-fc16-445e-841c-0253288fa332",
    "metadata": {},
    "outputs": [],
@@ -689,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "fe8ea98a-853c-469d-bfa5-ac99b26fb921",
    "metadata": {},
    "outputs": [],
@@ -709,14 +711,6 @@
    "source": [
     "tadaa!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bf42649e-80fc-4eac-8609-61ca26842706",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
